ingress/dev.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-dev
  labels:
    tier: dev
  annotations: {
    "opencontrail.org/network" : '{"domain":"default-domain", "project": "demo", "name":"test-net"}'
  }
spec:
  containers:
    - name: test-dev
      image: savvythru/dev-webapp
      ports:
      - containerPort: 80
