ingress/ubuntu-database.yaml
apiVersion: v1
kind: Pod
metadata:
  name: database-pod
  labels:
    tier: database
  annotations: {
    "opencontrail.org/network" : '{"domain":"default-domain", "project": "demo", "name":"database-network"}'
  }
spec:
  containers:
    - name: database-pod
      image: ubuntu-upstart
