ingress/ubuntu-frontend.yaml
apiVersion: v1
kind: Pod
metadata:
  name: frontend-pod
  labels:
    tier: frontend
  annotations: {
    "opencontrail.org/network" : '{"domain":"default-domain", "project": "demo", "name":"frontend-network"}'
  }
spec:
  containers:
    - name: frontend-pod
      image: ubuntu-upstart
