ingress/dev-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: dev-service
spec:
  selector:
    tier: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
