ingress/qa-svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: qa-service
spec:
  selector:
    tier: qa
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
